--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,18 @@ button:hover {
   word-break: break-all;
 }
 
+.textarea {
+  padding-top: 5px;
+  outline: none;
+  border: none;
+  width: 150px;
+}
+
+.textarea:focus {
+  outline: none;
+  border: none;
+}
+
 .task button {
   align-self: flex-end;
   margin-left: auto;
